--- a/bd-team-project-sommerzeit03/template_java_project/build.gradle
+++ b/bd-team-project-sommerzeit03/template_java_project/build.gradle
@@ -60,6 +60,13 @@ dependencies {
     implementation 'com.amazonaws:aws-lambda-java-events:2.2.9'
     runtimeOnly 'com.amazonaws:aws-lambda-java-log4j2:1.2.0'
 
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+
+
+    // Added for using log4j usage
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.1'
+
 }
 
 task buildZip(type: Zip) {
